--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-TW">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Park Wanderer</title>
-
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-</style>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="./App.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Park Wanderer</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
