--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <script type="module" src="./src/main.js"></script>52222
+  <script type="module" src="./src/main.js"></script>
 
 </body>
 </html>
